# auth-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: checks.yml
proto/: v1.proto
sql/: init_pg.sql
src/: lib.rs
src/data_source/: mod.rs
src/entities/: mod.rs  user.rs
src/error/: mod.rs
src/prelude/: mod.rs
