[package]
name = "simple-auth"
version = "0.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
derive-getters = "0.3.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
sqlx = { version = "0.7.2", features = ["postgres", "chrono", "runtime-tokio"] }
tonic = "0.10.2"
tracing = "0.1.40"
uuid = "1.5.0"


[features]
default = []
postgres = []
grpc_client = []
grpc_server = []
local_client = []
cache = []
redis = ["cache"]
tracing = []

[build-dependencies]
tonic-build = "0.10.2"
